index pages mainly

--- a/style.css
+++ b/style.css
@@ -219,3 +219,6 @@ font-family: 'Helvetica', sans-serif;
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
   }
+
+  console.log("London Parks");
+
