--- a/park_page_style.css
+++ b/park_page_style.css
@@ -15,6 +15,7 @@ nav{
 
 body, html {
     height: 100%;
+    
 }
 
 
@@ -23,6 +24,7 @@ body, html {
     margin-inline-start: 1cm;
     position: absolute;
     font-family: 'Helvetica', sans-serif;
+    margin-bottom: 5%;
     
 }
 h2 {
